# sovits-wyoming_bridge

./: Dockerfile  LICENSE  NOTICE  README.md  TODO.md  devguide.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: smoke_wyoming_tts.py
sovits_wyoming_connector/: __init__.py  __main__.py  audio.py  config.py  handler.py  sovits_client.py
tests/: test_audio.py  test_config.py  test_handler.py
